[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/plots/purchasable_plot.png" type="Texture" id=1]
[ext_resource path="res://clickable_items/money_speed_plot/purchasable_plot.gd" type="Script" id=2]
[ext_resource path="res://event_handling/event_manager/event_manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://event_handling/events/speed_grow/speed_grow.tres" type="Resource" id=4]
[ext_resource path="res://money_managers/price_display/price_display.tscn" type="PackedScene" id=5]
[ext_resource path="res://event_handling/events/money_grow/money_grow.tres" type="Resource" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.1628, 36.5449 )

[node name="PurchasablePlot" type="Node2D"]
script = ExtResource( 2 )

[node name="EventManager" parent="." instance=ExtResource( 3 )]
common_events = [ ExtResource( 6 ), ExtResource( 4 ) ]
uncommon_chance = 0.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="PriceDisplay" parent="." instance=ExtResource( 5 )]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
